# OS

./: README.md
General/lab2/: main.cpp
General/lab4/: buffered_channel.h
IPC/: main.cpp
IPC/file/first/: main.cpp
IPC/file/second/: main.cpp
IPC/named pipe/: pipe.cpp  pipe.h
IPC/named pipe/first/: main.cpp
IPC/named pipe/second/: main.cpp
IPC/pipe/: main.cpp
IPC/socket/client/: client.cpp  client.h
IPC/socket/server/: server.cpp  server.h
linux/dungeon_master/: dungeon_master.cpp
linux/lab1/: script.sh
linux/lab1/dungeon_master/: CMakeLists.txt  dungeon_master.cpp
linux/lab1/number/: number.h
linux/lab1/trash/: oao.out
linux/lab1/vector/: vector.h
linux/lab2/: main.cpp
linux/lab3/: buffered_channel.h
linux/lab4/: main.cpp
linux/number/: CMakeLists.txt  number.cpp
linux/pipe/pipeLine/: CMakeLists.txt  main.cpp
linux/process/killer/: CMakeLists.txt  main.cpp
linux/process/user/: CMakeLists.txt  main.cpp
linux/vector/: CMakeLists.txt  vector.cpp  vector.h
windows/lab1/DllVector/: DllVector.sln
windows/lab1/DllVector/DllVector/: DllVector.vcxproj  Vector.cpp  Vector.h
windows/lab1/DllVector/x64/Debug/: DllVector.exp  DllVector.lib
windows/lab1/Number/: Number.sln
windows/lab1/Number/Number/: Number.cpp  Number.h  Number.vcxproj
windows/lab1/test/: test.sln
windows/lab1/test/test/: test.cpp  test.vcxproj
windows/lab2/: MatrixMult.cpp
windows/pipe/pipeLine/pipetest/: pipetest.cpp
windows/process/killer/: CMakeLists.txt  main.cpp
windows/process/user/: CMakeLists.txt  main.cpp
(+31 files in other folders)
